--- a/package.json
+++ b/package.json
@@ -4,16 +4,35 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/cli": "latest",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "attendity": "file:",
     "expo": "~52.0.18",
+    "expo-camera": "~16.0.9",
+    "expo-dev-client": "~5.0.6",
+    "expo-face-detector": "~13.0.1",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "^16.0.3",
+    "expo-local-authentication": "~15.0.1",
+    "expo-location": "~18.0.4",
+    "expo-notifications": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
