--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "attendity": "file:",
     "expo": "~52.0.18",
     "expo-camera": "~16.0.9",
+    "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.6",
-    "expo-face-detector": "~13.0.1",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-local-authentication": "~15.0.1",
     "expo-location": "~18.0.4",
     "expo-notifications": "~0.29.11",
+    "expo-sms": "~13.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "^4.6.3"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
